Parallelize profile transparency scraping

--- a/jupyter/process_raw_profile_transparency.ipynb
+++ b/jupyter/process_raw_profile_transparency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ebc1baf1",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,21 @@
       "No captures found for url https://www.facebook.com/profile.php?id=100006871840776 in file profile_A6653DCA7775D412C32DC2123FB61629FBE04ADBB09D34C3704FA078D7B33F41.json\n",
       "No captures found for url https://www.facebook.com/beznamintii in file profile_A720BE7411CE92EC1057924921E768253E4E08ECB01B8EE48D2B1ABD5030EBDB.json\n",
       "No captures found for url https://www.facebook.com/gabriel.dimofte.35 in file profile_B168DF99E9BCF983C0CDFEA70946E05295E19DC7EC094DCA7B6B48B5EAF1C234.json\n",
-      "No captures found for url https://www.facebook.com/profile.php?id=100085705093454 in file profile_CD4DD2E70EA121AB9D102AF2CDC348826CAE969D56A2562E32F2661A1D9BAF87.json\n"
+      "No captures found for url https://www.facebook.com/profile.php?id=100085705093454 in file profile_CD4DD2E70EA121AB9D102AF2CDC348826CAE969D56A2562E32F2661A1D9BAF87.json\n",
+      "Possibly deleted profiles:\n",
+      "https://www.facebook.com/catalin.tarau\n",
+      "https://www.facebook.com/placutasuedeza\n",
+      "https://www.facebook.com/aur.arad.9\n",
+      "https://www.facebook.com/adina.iriza.2024\n",
+      "https://www.facebook.com/profile.php?id=61570587221304\n",
+      "https://www.facebook.com/badea.elena.71\n",
+      "https://www.facebook.com/noapteamintii\n",
+      "https://www.facebook.com/antihastagrezist\n",
+      "https://www.facebook.com/ciumitarosie\n",
+      "https://www.facebook.com/profile.php?id=100006871840776\n",
+      "https://www.facebook.com/beznamintii\n",
+      "https://www.facebook.com/gabriel.dimofte.35\n",
+      "https://www.facebook.com/profile.php?id=100085705093454\n"
      ]
     }
    ],
@@ -32,9 +46,10 @@
     "import re\n",
     "\n",
     "# Directory containing the JSON files\n",
-    "directory = \"../profile_transpare\" \\\n",
-    "\"ncy\"\n",
+    "directory = \"../profile_transparency\"\n",
     "output_dir = \"../output/profiles\"\n",
+    "\n",
+    "possibly_deleted = []\n",
     "\n",
     "# Create the output directory if it doesn't exist\n",
     "if not os.path.exists(output_dir):\n",
@@ -144,6 +159,7 @@
     "                        print(f\"Inconsistent captures in file {filename}: {captures}\")\n",
     "                    else:\n",
     "                        if not captures:\n",
+    "                            possibly_deleted.append(data[\"url\"])\n",
     "                            print(f\"No captures found for url {output['url']} in file {filename}\")\n",
     "                        else:\n",
     "                            output[\"account_type\"] = captures[0] if captures else \"\"\n",
@@ -209,7 +225,12 @@
     "        except json.JSONDecodeError as e:\n",
     "            print(f\"Error decoding JSON in file {filename}: {e}\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error processing file {filename}: {e}\")"
+    "            print(f\"Error processing file {filename}: {e}\")\n",
+    "\n",
+    "\n",
+    "print(\"Possibly deleted profiles:\")\n",
+    "for filename in possibly_deleted:\n",
+    "    print(filename)"
    ]
   }
  ],
@@ -229,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
