--- a/jupyter/check_addresses.ipynb
+++ b/jupyter/check_addresses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "8110c9b8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "19f3e611",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "id": "f15ca99c",
    "metadata": {},
    "outputs": [],
@@ -107,127 +107,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=100083590601710&sk=about](https://www.facebook.com/profile.php?id=100083590601710&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=100083590601710&sk=about](https://www.facebook.com/profile.php?id=100083590601710&sk=about) → `New York, NY, United States`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/italia.sosro.ro](https://www.facebook.com/italia.sosro.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/italia.sosro.ro](https://www.facebook.com/italia.sosro.ro) → `Rome, Italy`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/arges.sosro.ro](https://www.facebook.com/arges.sosro.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/arges.sosro.ro](https://www.facebook.com/arges.sosro.ro) → `B-dul Republicii, nr. 148, etaj1, fosta cladire Electrica`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/dolj.sosro.ro](https://www.facebook.com/dolj.sosro.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/dolj.sosro.ro](https://www.facebook.com/dolj.sosro.ro) → `Vasile Alecsandri nr 47`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/vrancea.sosro.ro](https://www.facebook.com/vrancea.sosro.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/vrancea.sosro.ro](https://www.facebook.com/vrancea.sosro.ro) → `Bd Unirii, nr.9, bl.9, ap.33, Focsani, Moldova, 620095`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/botosani.sosro.ro](https://www.facebook.com/botosani.sosro.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/botosani.sosro.ro](https://www.facebook.com/botosani.sosro.ro) → `1 DECEMBRIE  NR 12 (CENTRU VECHI VIZ A VIZ DE STATUIE)`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/stirilefxnetro](https://www.facebook.com/stirilefxnetro)\n",
-      "\n",
-      "- [https://www.facebook.com/stirilefxnetro](https://www.facebook.com/stirilefxnetro) → `Calea Calarasilor nr 169 Bucuresti, 600261`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/bula1977](https://www.facebook.com/bula1977)\n",
-      "\n",
-      "- [https://www.facebook.com/bula1977](https://www.facebook.com/bula1977) → `Barcelona, Spain, 08006`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/cancan.ro](https://www.facebook.com/cancan.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/cancan.ro](https://www.facebook.com/cancan.ro) → `Sos. Fabrica de Glucoz, nr. 21, parter, sector 2, 041715`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/TeodoraOnlineOficial](https://www.facebook.com/TeodoraOnlineOficial)\n",
-      "\n",
-      "- [https://www.facebook.com/TeodoraOnlineOficial](https://www.facebook.com/TeodoraOnlineOficial) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "- [https://www.facebook.com/privestesiascultaa](https://www.facebook.com/privestesiascultaa) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "- [https://www.facebook.com/alandalaoficial2](https://www.facebook.com/alandalaoficial2) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "- [https://www.facebook.com/profile.php?id=61551458330296&sk=about](https://www.facebook.com/profile.php?id=61551458330296&sk=about) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 5AL`\n",
-      "- [https://www.facebook.com/AcasatvOfficial](https://www.facebook.com/AcasatvOfficial) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "- [https://www.facebook.com/acasainromaniaaa](https://www.facebook.com/acasainromaniaaa) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "- [https://www.facebook.com/acasainromaniaa](https://www.facebook.com/acasainromaniaa) → `George Beard Road, Aragon Tower, London, United Kingdom, SE8 3AL`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=61570938890030&sk=about](https://www.facebook.com/profile.php?id=61570938890030&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=61570938890030&sk=about](https://www.facebook.com/profile.php?id=61570938890030&sk=about) → `673 Lordship Lane, London N22 5LA, London, United Kingdom`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=100094785674694&sk=about](https://www.facebook.com/profile.php?id=100094785674694&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=100094785674694&sk=about](https://www.facebook.com/profile.php?id=100094785674694&sk=about) → `Drobeta-Turnu`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=100070250405818&sk=about](https://www.facebook.com/profile.php?id=100070250405818&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=100070250405818&sk=about](https://www.facebook.com/profile.php?id=100070250405818&sk=about) → `610133`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=61561014210442&sk=about](https://www.facebook.com/profile.php?id=61561014210442&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=61561014210442&sk=about](https://www.facebook.com/profile.php?id=61561014210442&sk=about) → `400686`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/ticalosu.ro](https://www.facebook.com/ticalosu.ro)\n",
-      "\n",
-      "- [https://www.facebook.com/ticalosu.ro](https://www.facebook.com/ticalosu.ro) → `Rotterdam, Netherlands`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=61565074165172&sk=about](https://www.facebook.com/profile.php?id=61565074165172&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=61565074165172&sk=about](https://www.facebook.com/profile.php?id=61565074165172&sk=about) → `Zalau, 457280`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/romaniataraluidumnezeu](https://www.facebook.com/romaniataraluidumnezeu)\n",
-      "\n",
-      "- [https://www.facebook.com/romaniataraluidumnezeu](https://www.facebook.com/romaniataraluidumnezeu) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/romaniapamantsfant](https://www.facebook.com/romaniapamantsfant) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/LumeaLuiRuxy1](https://www.facebook.com/LumeaLuiRuxy1) → `30 N Gould St, STE R, Sheridan, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/romanidintoatalumeaa](https://www.facebook.com/romanidintoatalumeaa) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/romaniatarabinecuvantata](https://www.facebook.com/romaniatarabinecuvantata) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/stiriletv.ro](https://www.facebook.com/stiriletv.ro) → `30 N Gould St, STE R, Sheridan, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/romaniaeviatamea](https://www.facebook.com/romaniaeviatamea) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "- [https://www.facebook.com/viatainromaniaa](https://www.facebook.com/viatainromaniaa) → `30 N GOULD ST STE R SHERIDAN, WY 82801, Sheridan, WY, United States, 82801`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/lesecretdebouheur](https://www.facebook.com/lesecretdebouheur)\n",
-      "\n",
-      "- [https://www.facebook.com/lesecretdebouheur](https://www.facebook.com/lesecretdebouheur) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Gap, France`\n",
-      "- [https://www.facebook.com/votrediverssemantt](https://www.facebook.com/votrediverssemantt) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Gap, France`\n",
-      "- [https://www.facebook.com/mondedesideess](https://www.facebook.com/mondedesideess) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Les Gaps, France`\n",
-      "- [https://www.facebook.com/rionsunpen](https://www.facebook.com/rionsunpen) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Les Gaps, France`\n",
-      "- [https://www.facebook.com/meilleuredistraction](https://www.facebook.com/meilleuredistraction) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Les Gaps, France`\n",
-      "- [https://www.facebook.com/lamourdesanimauxx](https://www.facebook.com/lamourdesanimauxx) → `Avenue de Bure Bt B1 app 65 05000 Gap France, Les Gaps, France`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=100023686410690&sk=about](https://www.facebook.com/profile.php?id=100023686410690&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=100023686410690&sk=about](https://www.facebook.com/profile.php?id=100023686410690&sk=about) → `Avenue de Bure Bt B1 app 65  05000 Gap  France`\n",
-      "- [https://www.facebook.com/drolemonde](https://www.facebook.com/drolemonde) → `Avenue de Bure Bt B1 app 65 05000 Gap France`\n",
-      "- [https://www.facebook.com/mondedesanimauxx](https://www.facebook.com/mondedesanimauxx) → `Avenue de Bure Bt B1 app 65 05000 Gap France`\n",
-      "- [https://www.facebook.com/bonneinfo2021](https://www.facebook.com/bonneinfo2021) → `Avenue de Bure Bt B1 app 65 05000 Gap France`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/OChilieAthonita](https://www.facebook.com/OChilieAthonita)\n",
-      "\n",
-      "- [https://www.facebook.com/OChilieAthonita](https://www.facebook.com/OChilieAthonita) → `Schitul Lacu, Chilia Intrarea n Biseric a Maicii Domnului, Karys, Greece, 630 86`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/AlternativaDreaptaSpania](https://www.facebook.com/AlternativaDreaptaSpania)\n",
-      "\n",
-      "- [https://www.facebook.com/AlternativaDreaptaSpania](https://www.facebook.com/AlternativaDreaptaSpania) → `Madrid, Spain`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/roctviasi](https://www.facebook.com/roctviasi)\n",
-      "\n",
-      "- [https://www.facebook.com/roctviasi](https://www.facebook.com/roctviasi) → `strada Principal nr. 12, 727455`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/profile.php?id=100068032181927&sk=about](https://www.facebook.com/profile.php?id=100068032181927&sk=about)\n",
-      "\n",
-      "- [https://www.facebook.com/profile.php?id=100068032181927&sk=about](https://www.facebook.com/profile.php?id=100068032181927&sk=about) → `North Dunstable, United Kingdom`\n",
-      "\n",
-      "### 🔗 Grup cu reprezentantul: [https://www.facebook.com/baiatulinspirat1](https://www.facebook.com/baiatulinspirat1)\n",
-      "\n",
-      "- [https://www.facebook.com/baiatulinspirat1](https://www.facebook.com/baiatulinspirat1) → `ploiesti`\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2176"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -305,8 +192,16 @@
     "# Sortează grupurile descrescător, după numărul de conturi\n",
     "sorted_groups = sorted(groups.items(), key=lambda item: len(item[1]), reverse=True)\n",
     "\n",
+    "# Remove groups with less than 2 accounts\n",
+    "sorted_groups = [(leader_url, group_urls) for leader_url, group_urls in sorted_groups if len(group_urls) > 1]\n",
+    "\n",
     "# Generează conținutul raportului în limba română\n",
     "report_lines = [\"# 📍 Gruparea conturilor după adresă (top)\\n\"]\n",
+    "\n",
+    "report_lines.append(\"Acest raport conține grupuri de conturi Facebook care au adrese similare. Adresele sunt normalizate pentru a elimina variațiile minore.\\n\")\n",
+    "\n",
+    "report_lines.append(\"Sunt incluse doar grupurile cu mai mult de 1 cont.\")\n",
+    "\n",
     "\n",
     "for leader_url, group_urls in sorted_groups:\n",
     "    address = other_addresses[leader_url]\n",
@@ -318,42 +213,7 @@
     "# Salvează raportul în fișierul Markdown\n",
     "report_path = Path(\"../reports/report-top-other-addresses.md\")\n",
     "report_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "report_path.write_text(\"\\n\".join(report_lines), encoding=\"utf-8\")\n",
-    "\n",
-    "# Normalizează adresele (litere mici, fără virgule, fără spații inutile)\n",
-    "normalized = {url: addr.lower().replace(\",\", \"\").strip() for url, addr in other_addresses.items()}\n",
-    "\n",
-    "urls = list(normalized.keys())\n",
-    "vizitate = set()\n",
-    "grupuri = defaultdict(list)\n",
-    "\n",
-    "PRAG_SIMILARITATE = 90\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Compară fiecare adresă cu celelalte\n",
-    "for i, url_i in enumerate(urls):\n",
-    "    if url_i in vizitate:\n",
-    "        continue\n",
-    "    grup = [url_i]\n",
-    "    vizitate.add(url_i)\n",
-    "    adresa_i = normalized[url_i]\n",
-    "    for j in range(i + 1, len(urls)):\n",
-    "        url_j = urls[j]\n",
-    "        if url_j in vizitate:\n",
-    "            continue\n",
-    "        adresa_j = normalized[url_j]\n",
-    "        similaritate = fuzz.ratio(adresa_i, adresa_j)\n",
-    "        if similaritate >= PRAG_SIMILARITATE:\n",
-    "            grup.append(url_j)\n",
-    "            vizitate.add(url_j)\n",
-    "    grupuri[url_i] = grup  # folosim primul URL ca reprezentant al grupului\n",
-    "\n",
-    "# 🔽 Afișează rezultatul în format Markdown\n",
-    "for lider_grup, grup_url in grupuri.items():\n",
-    "    print(f\"\\n### 🔗 Grup cu reprezentantul: [{lider_grup}]({lider_grup})\\n\")\n",
-    "    for url in grup_url:\n",
-    "        print(f\"- [{url}]({url}) → `{other_addresses[url]}`\")\n"
+    "report_path.write_text(\"\\n\".join(report_lines), encoding=\"utf-8\")\n"
    ]
   }
  ],
