--- a/jupyter/accounts_master.ipynb
+++ b/jupyter/accounts_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c400a1cb",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,9 @@
     "\n",
     "# augment accounts with creation dates\n",
     "for account in accounts:\n",
+    "    ad_status = account.get('ad_status', {})\n",
+    "    ad_status['has_run'] = ad_status.get('has_run', False)  # Set default value for has_run if not present\n",
+    "    account['ad_status'] = ad_status\n",
     "    profile_url = account.get('profile_url')\n",
     "    if profile_url in creation_dates:\n",
     "        account['creation_date'] = creation_dates[profile_url]\n",
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4bb8f69d",
    "metadata": {},
    "outputs": [],
@@ -78,6 +81,8 @@
     "import hashlib\n",
     "\n",
     "for account in accounts:\n",
+    "    \n",
+    "\n",
     "    profile_url = account.get('profile_url')\n",
     "    if profile_url:\n",
     "        # Hash the profile_url using sha256 and convert to uppercase\n",
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2e388988",
    "metadata": {},
    "outputs": [],
@@ -120,12 +125,29 @@
     "with open('../output/addresses.json', 'r', encoding='utf-8') as addresses_file:\n",
     "    addresses_data = json.load(addresses_file)\n",
     "\n",
+    "for key in list(addresses_data.keys()):\n",
+    "    # replace \"null\" with None in the addresses data\n",
+    "    if addresses_data[key] == \"null\":\n",
+    "        addresses_data[key] = None\n",
+    "    # normalize the addresses data (the keys are the profile URLs that include either /about or &sk=about)\n",
+    "    if '/about' in key:\n",
+    "        new_key = key.split('/about')[0]\n",
+    "        addresses_data[new_key] = addresses_data.pop(key)\n",
+    "    elif '&sk=about' in key:\n",
+    "        new_key = key.split('&sk=about')[0]\n",
+    "        addresses_data[new_key] = addresses_data.pop(key)\n",
+    "\n",
     "for account in accounts:\n",
     "    profile_url = account.get('profile_url')\n",
     "    if profile_url and profile_url in addresses_data:\n",
     "        account['address'] = addresses_data[profile_url]\n",
     "    else:\n",
-    "        account['address'] = None"
+    "        account['address'] = None\n",
+    "\n",
+    "# Save the updated accounts data to a new JSON file\n",
+    "output_file_path = '../output/accounts_master.json' \n",
+    "with open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "    json.dump(account_data, output_file, ensure_ascii=False, indent=4)"
    ]
   }
  ],
